# diesel-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  ci-cd.md  configuration.md  custom-checks.md  frameworks.md  installation.md  introduction.md  quickstart.md  robots.txt  safety-assured.md
docs/src/checks/: add-column-default.md  add_foreign_key.md  adding-index.md  adding-unique-constraint.md  changing-column-type.md  char-field.md  creating-extension.md  dropping-column.md  dropping-constraint.md  dropping-database.md  dropping-index.md  dropping-primary-key.md  dropping-table.md  generated-column.md  json-field.md  multiple-column-index.md  overview.md  reindexing.md  renaming-column.md  renaming-table.md  serial-primary-key.md  set-not-null.md  short-primary-key.md  timestamp-field.md  truncating-table.md  unnamed-constraint.md
src/: config.rs  main.rs  output.rs
src/checks/: add_foreign_key.rs  mod.rs  pg_helpers.rs  unnamed_constraint.rs
tests/: check_test.rs  fixtures_test.rs  init_test.rs  output_test.rs
tests/fixtures/add_foreign_key_safe/: up.sql
tests/fixtures/add_foreign_key_unsafe/: up.sql
tests/fixtures/unnamed_constraint_safe/: up.sql
