[package]
name = "diesel-guard"
version = "0.8.0"
edition = "2024"
authors = ["Alex Yarotsky <https://github.com/ayarotsky>"]
description = "Linter for dangerous Postgres migration patterns in Diesel and SQLx"
documentation = "https://ayarotsky.github.io/diesel-guard/"
license = "MIT"
repository = "https://github.com/ayarotsky/diesel-guard"
homepage = "https://github.com/ayarotsky/diesel-guard"
readme = "README.md"
keywords = ["linter", "postgres", "postgresql", "sqlx", "diesel"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# SQL parsing
pg_query = "6"

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config file
toml = "1.0"

# Scripting engine for custom checks
rhai = { version = "1", features = ["serde", "sync"] }

# Path handling
camino = "1.2"
walkdir = "2.4"

# Validation
regex = "1.12"

# Error reporting
miette = { version = "7.0", features = ["fancy-no-backtrace"] }

# Derive macros
derive_more = { version = "2.1", features = ["display", "from", "error"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"

[dev-dependencies]
tempfile = "3.26"
